# dl-playground

./: .gitignore  README.md  pyproject.toml
src/: __init__.py
src/classical/: __init__.py
src/classical/cnn/: __init__.py  test.py  train.py
src/classical/cnn/models/: __init__.py  vgg.py
src/classical/rnn/: __init__.py  model.py  train.py
src/classical/softmax/: __init__.py  test.py
src/classical/softmax/models/: __init__.py  softmax.py
src/dl_playground/: __init__.py
src/generative/: __init__.py
src/generative/autoregressive/: __init__.py  config.py  train.py
src/generative/autoregressive/datasets/: __init__.py  mnist.py
src/generative/autoregressive/models/: __init__.py  autoregressive.py  positional.py
src/generative/diffusion/: __init__.py  ddpm.py  inference.py  model.py  train.py
src/generative/gan/: __init__.py  generative-gan.ipynb
src/generative/vae/: __init__.py  load_celebA.py  main.py  model.py
src/transformer/: __init__.py  config.py  test.py  train.py
src/transformer/datasets/: mnist.py
src/transformer/model/: __init__.py  attention.py  decoder.py  encoder.py  multihead.py  positional.py  transformer.py
src/utils/: __init__.py  metrics.py  paths.py  visualization.py
